# duckdb-fastlane

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_fastlanes.sh  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
examples/: basic_usage.sql
src/: fastlane_extension.cpp  fastlanes_facade.cpp  fastlanes_facade.hpp  scan_fastlanes.cpp  scan_fastlanes.hpp  type_mapping.cpp
src/converter/: csv_to_fastlane.cpp  json_to_fastlane.cpp
src/include/: fastlane_extension.hpp  fastlanes_facade.hpp  type_mapping.hpp  write_fastlane_stream.hpp
src/include/table_function/: csv_to_fastlane.hpp  json_to_fastlane.hpp  read_fastlane.hpp  scan_fastlanes.hpp
src/include/writer/: write_fastlane.hpp
src/scanner/: read_fastlane.cpp  scan_fastlanes.cpp
src/writer/: write_fastlane.cpp  write_fastlane_stream.cpp
test/sql/: fastlane.test
vcpkg_ports/fastlanes/: portfile.cmake  vcpkg.json
vcpkg_ports/fastlanes/patches/: allow-gcc.patch
